# csp-adapter-zeromq

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/actions/setup-caches/: action.yml
.github/actions/setup-dependencies/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: conda.yml
conda/: dev-env-unix.yml  dev-env-win.yml
cpp/cmake/modules/: FindCSP.cmake  FindDepsBase.cmake
cpp/csp_adapter_zeromq/: AdapterManager.cpp  AdapterManager.h  CMakeLists.txt  ContextManager.cpp  ContextManager.h  GenericPushInputAdapter.cpp  GenericPushInputAdapter.h  PubOutputAdapter.cpp  PubOutputAdapter.h  PubSocket.cpp  PubSocket.h  PullSocket.cpp  PullSocket.h  PushOutputAdapter.cpp  PushOutputAdapter.h  PushSocket.cpp  PushSocket.h  SocketWrapper.cpp  SocketWrapper.h  StructWriter.cpp  StructWriter.h  SubSocket.cpp  SubSocket.h  adapterimpl.cpp
cpp/csp_zeromq_adapter/: AdapterManager.cpp  AdapterManager.h  CMakeLists.txt  ContextManager.cpp  ContextManager.h  GenericPushInputAdapter.cpp  GenericPushInputAdapter.h  PubOutputAdapter.cpp  PubOutputAdapter.h  PubSocket.cpp  PubSocket.h  PullSocket.cpp  PullSocket.h  PushOutputAdapter.cpp  PushOutputAdapter.h  PushSocket.cpp  PushSocket.h  SocketWrapper.cpp  SocketWrapper.h  StructWriter.cpp  StructWriter.h  SubSocket.cpp  SubSocket.h  adapterimpl.cpp
csp_adapter_zeromq/: __init__.py  adapter.py  manager.py
csp_adapter_zeromq/tests/test_e2e/: test_pub_sub.py  test_push_pull.py
csp_adapter_zeromq/tests/test_sockets/: test_pub.py  test_pull.py  test_push.py  test_sub.py
csp_zeromq_adapter/: __init__.py  adapter.py  base_socket.py  manager.py
csp_zeromq_adapter/tests/: conftest.py
csp_zeromq_adapter/tests/test_e2e/: test_pub_sub.py  test_push_pull.py
csp_zeromq_adapter/tests/test_sockets/: test_pub.py  test_pull.py  test_push.py  test_sub.py
examples/pub_sub/: 01_hello_world.py  02_multiple_topics.py
examples/push_pull/: 01_hello_world.py
